# magnum-ui

./: .eslintrc  .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  babel-django.cfg  lower-constraints.txt  manage.py  package.json  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: api.rst  index.rst
doc/source/install/: index.rst
doc/source/releases/: 0.1.0.rst
enabled/: _50_add_containers_dashboard.py  _50_project_containers_panelgroup.py  _51_project_container-infra_bays_panel.py  _51_project_containers_bays_panel.py  _52_project_container-infra_baymodels_panel.py  _52_project_containers_baymodels_panel.py  _53_project_containers_containers_panel.py
magnum-ui/locale/: magnum-ui.pot
magnum_ui/: dashboard.py  karma.conf.js  version.py
magnum_ui/api/: heat.py  magnum.py
magnum_ui/api/rest/: __init__.py  (+1 more)
magnum_ui/bay/: panel.py  urls.py  views.py
magnum_ui/baymodel/: panel.py  tests.py  urls.py  views.py
magnum_ui/containers/: panel.py  tests.py  urls.py  views.py
magnum_ui/enabled/: _1370_project_container-infra_panelgroup.py  _1370_project_container_infra_panel_group.py  _1371_project_container_infra_clusters_panel.py  _1372_project_container_infra_cluster_templates_panel.py  _2370_admin_container_infra_panel_group.py  _2371_admin_container_infra_quotas_panel.py
magnum_ui/locale/: django.pot  djangojs.pot
magnum_ui/test/: helpers.py  settings.py  test_data.py
releasenotes/notes/: Workflow-updates-for-Create-Cluster-65e4fe510b4d1a4c.yaml  add-fedora-coreos-7882a33d801371fe.yaml  add-reno-7d46796dbf41c247.yaml  bugfix-cluster-template-hidden-arg-38909eaa92bd8d56.yaml  bugfix-set-floating_ip_enabled-default_in-cluster-template-true-ce06118f0e6064ba.yaml  credential-rotate-e507587e06d70d48.yaml  drop-old-python-versions.yaml  filter-flavors-1b7085bfba34bc04.yaml  improve-cluster-launch-dfc514b51cfa7f0e.yaml  lb_floating_ip-ca6039444f88a968.yaml  newton-dac21adfe6c6b8ee.yaml  ocata-b08d6b024c63296b.yaml  ocata-summary-a717111a782c7a68.yaml  pike-b1af664f1033a131.yaml  queens-f99244e9db54ccf3.yaml  resize-actions-1436a2a0dccbd13b.yaml  rocky-56165675d959b593.yaml  show-health-status-ff92b2fe2bfad5ae.yaml  stein-a6adf485dbbbbd1a.yaml  update-actions-02db7b9f8e5d36b6.yaml  upgrade-actions-adf2f749ec0cc817.yaml
releasenotes/source/: 2023.1.rst  2024.1.rst  conf.py  index.rst
tools/: install_venv.py  install_venv_common.py  tox_helper.sh
(+346 files in other folders)
