[metadata]
name = magnum-ui
version = 0.0.1
summary = Magnum User Interface
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    magnum_ui

[compile_catalog]
directory = magnum-ui/locale
domain = magnum-ui

[update_catalog]
domain = magnum-ui
output_dir = magnum-ui/locale
input_file = magnum-ui/locale/magnum-ui.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = magnum-ui/locale/magnum-ui.pot
